--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "Server side application built with nodejs and express",
   "main": "index.js",
   "scripts": {
-    
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "12.18.1"
   },
   "author": "Islam Abdelkarim",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "config": "^3.3.3",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "joi": "^17.4.0",
     "mysql": "^2.18.1"
   }
