--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "Islam Abdelkarim",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.4",
     "config": "^3.3.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "helmet": "^4.4.1",
     "joi": "^17.4.0",
-    "mysql": "^2.18.1"
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7"
   }
 }
